src/lexer/snapshots/cranexpr__lexer__tests__binary_ops.snap
---
source: src/lexer/mod.rs
expression: "lex(\"d e <\")"
---
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Lt
  len: 1
