src/lexer/snapshots/cranexpr__lexer__tests__dot.snap
---
source: src/lexer/mod.rs
expression: "tokenize(\"x.PlaneStatsAverage\").collect::<Vec<_>>()"
---
- kind: Ident
  len: 1
- kind: Dot
  len: 1
- kind: Ident
  len: 17
