src/lexer/snapshots/cranexpr__lexer__tests__literals-3.snap
---
source: src/lexer/mod.rs
expression: "lex(\"0xABC\")"
---
- kind:
    Literal:
      kind:
        Int:
          base: Hexadecimal
          empty_int: false
      suffix_start: 5
  len: 5
