src/lexer/snapshots/cranexpr__lexer__tests__literals-5.snap
---
source: src/lexer/mod.rs
expression: "lex(\"1.0e10\")"
---
- kind:
    Literal:
      kind:
        Float:
          base: Decimal
          empty_exponent: false
      suffix_start: 6
  len: 6
